[project]
name = "vector-db-utils"
version = "0.1.9"
description = "Custom Qdrant client"
authors = [{name = "Oleg Sidorov", email = "sidorov.works@yandex.ru"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "qdrant-client>=1.17.0", 
    "pydantic>=2.12.5"       
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]